--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -47,7 +47,6 @@
   color: #656975;
 }
 .device-container {
-  border: 1px solid red;
   height: 100%;
   z-index: 10;
   align-self: flex-end;
@@ -56,7 +55,7 @@
 .skew {
   transform:skew(0deg,-10deg);
   background-color: white;
-  padding:5em 0;
+  padding:10em 0;
 }
 .body {
   transform:skew(0deg,10deg);
@@ -96,6 +95,19 @@
 .row a:hover {
   color: #1E2330;
   text-decoration: underline;
+}
+h1, h2 {
+  margin: 4px;
+  margin-left: 0;
+}
+.blockquote {
+  border-left:5px solid #cfcfcf;
+  border-radius: 2px;
+  padding: .5em;
+}
+.blockquote blockquote {
+  margin-left: 0;
+  font-weight: bold;
 }
 @media screen and (max-width: 800px) {
   .main .container {
