--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   padding: 0 2em;
 }
 .container {
@@ -110,6 +111,16 @@ h1, h2 {
 .blockquote blockquote {
   margin-left: 0;
   font-weight: bold;
+}
+.card {
+  text-align: left;
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  min-height: 300px;
+  margin: 1rem;
+  padding: 1rem 2rem 1rem 1rem;
+  position: relative;
 }
 @media screen and (max-width: 800px) {
   .main .container {
