--- a/client/src/assets/stylesheets/common.css
+++ b/client/src/assets/stylesheets/common.css
@@ -20,7 +20,10 @@ a:hover {
 	right: 0;
   background: linear-gradient(to right, #101525 0%,#1e2638 50%,#101525 100%);
 }
-
+html, body, .app {
+  background: black;
+  width: 100vw;
+}
 .app.active-drawer {
   overflow: hidden;
   max-height: 100vh;
@@ -184,5 +187,28 @@ h1, h2 {
   }
   .main .container {
     min-width: 90%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .app.active-drawer {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    max-height: 100%;
+  }
+  .app.active-drawer .view {
+    right: 0;
+  }
+  #drawer {
+    position: static;
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  .app.active-drawer #drawer {
+    height: 90vh;
   }
 }
